--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <div class="container">
   <h1>철산·하안 재건축 주요 단지 설계동영상 모음</h1>
-  <div class="subtitle">설계사 홍보영상 기반 1페이지 요약</div>
+  <div class="subtitle">설계사 홍보영상 기반 요약</div>
 
   <!-- 철산주공 12단지 -->
   <div class="card">
