--- a/Design.html
+++ b/Design.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>철산·하안 재건축 주요 단지 비교</title>
+  <title>철산·하안 재건축 주요 단지 설계동명상</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
