--- a/Mokdong.html
+++ b/Mokdong.html
@@ -85,7 +85,7 @@
     </div>
     <div class="content">
       <h2>목동 4단지 – Noble Island</h2>
-      <p><strong>설계:</strong> (작품영상)</p>
+      <p><strong>설계:</strong>나우동인건축</p>
       <p class="link">
         ▶ <a href="https://youtu.be/rGeMHAyKoIY" target="_blank">영상 보기</a>
       </p>
@@ -127,7 +127,7 @@
     </div>
     <div class="content">
       <h2>목동 10단지 – THE GOLDEN RING</h2>
-      <p><strong>설계:</strong> (작품영상)</p>
+      <p><strong>설계:</strong> 나우동인건축</p>
       <p class="link">
         ▶ <a href="https://youtu.be/jes7wMEz1IY" target="_blank">영상 보기</a>
       </p>
