--- a/Gm.html
+++ b/Gm.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>철산·하안 재건축 주요 단지 설계동명상</title>
+  <title>철산·하안 재건축 주요 단지 설계 동영상</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
@@ -85,7 +85,7 @@
 <body>
 
 <div class="container">
-  <h1>철산·하안 재건축 주요 단지 설계동영상 모음</h1>
+  <h1>철산·하안 재건축 주요 단지 설계 동영상 모음</h1>
   <div class="subtitle">설계사 홍보영상 기반 요약</div>
 
   <!-- 철산주공 12단지 -->
