--- a/Gm2.html
+++ b/Gm2.html
@@ -90,7 +90,7 @@
 
     <!-- 상단 안내 -->
     <div class="header">
-      <h1>광명 재건축 주요 단지 설계 동영상</h1>
+      <h1>광명 재건축 주요 단지 <br> 설계 동영상</h1>
       <p>
         광명시 철산·하안 주요 재건축 단지의 설계 홍보 영상을 정리한 자료입니다.<br>
         조합원 및 관심자 참고용입니다.
