--- a/Gm2.html
+++ b/Gm2.html
@@ -90,7 +90,7 @@
 
     <!-- 상단 안내 -->
     <div class="header">
-      <h1>광명 재건축 주요 단지 <br> 설계 동영상</h1>
+      <h1>광명 재건축 주요 단지 설계 동영상</h1>
       <p>
         광명시 철산·하안 주요 재건축 단지의 설계 홍보 영상을 정리한 자료입니다.<br>
         조합원 및 관심자 참고용입니다.
@@ -114,6 +114,26 @@
         <div class="card-title">하안주공 12단지</div>
         <div class="card-desc">더글로우 하안 | 건원건축 + 삼하건축</div>
         <a href="https://youtu.be/_15V1VihSGE" target="_blank">▶ 설계 동영상 보기</a>
+      </div>
+    </div>
+
+    <!-- 하안주공 10·11단지 (정림건축) -->
+    <div class="card">
+      <img src="https://i.ytimg.com/vi/__4qNvW9JzY/maxresdefault.jpg" alt="하안주공 10·11단지 정림건축">
+      <div class="card-body">
+        <div class="card-title">하안주공 10·11단지</div>
+        <div class="card-desc">설계 홍보 영상 | 정림건축</div>
+        <a href="https://youtu.be/__4qNvW9JzY" target="_blank">▶ 설계 동영상 보기</a>
+      </div>
+    </div>
+
+    <!-- 하안주공 10·11단지 (건원건축) -->
+    <div class="card">
+      <img src="https://i.ytimg.com/vi/9TGKw25yhnk/maxresdefault.jpg" alt="하안주공 10·11단지 건원건축">
+      <div class="card-body">
+        <div class="card-title">하안주공 10·11단지</div>
+        <div class="card-desc">설계 홍보 영상 | 건원건축</div>
+        <a href="https://youtu.be/9TGKw25yhnk" target="_blank">▶ 설계 동영상 보기</a>
       </div>
     </div>
 
