--- a/Gm2.html
+++ b/Gm2.html
@@ -7,7 +7,7 @@
   <!-- 카카오톡 / SNS 공유 최적화 -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Urban Rebuild">
-  <meta property="og:title" content="광명 재건축 주요 단지 <BR> 설계 동영상">
+  <meta property="og:title" content="광명 재건축 주요 단지 설계 동영상">
   <meta property="og:description" content="철산·하안 주요 재건축 단지별 설계 영상을 한눈에 확인하세요. 조합원 및 관심자를 위한 참고 자료입니다.">
   <meta property="og:image" content="https://i.ytimg.com/vi/2qxf2b-0uq0/maxresdefault.jpg">
   <meta property="og:url" content="https://urban-rebuild.github.io/Rebuild/Gm.html">
