--- a/map.html
+++ b/map.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>부동산 실무 맵 마스터 V54 (Pro UI)</title>
+<title>맵 마스터(거리측정)</title>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -375,4 +375,5 @@ function resetAllOtherModes(cur) {
 }
 </script>
 </body>
+
 </html>
